# MathAgent

./: .gitignore  README.md  aggregate_results.py  answering_results_enhanced4_ace_evaluation_result_2025-10-13_14-12-51.csv  answering_results_enhanced5_ace_evaluation_result_2025-10-13_14-08-54.csv  combine_result.ipynb  combined_output.csv  combined_output.xlsx  config.py  constant.py  eval_results_form4_gemini-2.5-flash-2step_2025-10-13_16-39-24.csv  experiments.ipynb  gpt5_enhanced_ace_evaluation_result_2025-10-13_13-52-25.csv  gpt5mini_enhanced5_ace_evaluation_result_2025-10-13_13-48-30.csv  llm_answer_evaluation copy.py  llm_answer_evaluation.py  math-test.ipynb  pyproject.toml  requirements.txt  run_ace_test.py  run_model_test.py  test_results_f4.csv  test_results_f4_gpt5mini.csv  test_results_f5.csv  test_results_f5_gpt5mini.csv  test_results_form4_gemini-2.5-flash-lite-preview-09-2025_COT+StepBack_evaluation_result_2025-10-13_15-08-16.csv  test_results_form4_gemini-2.5-flash-lite_COT+StepBack_evaluation_result_2025-10-29_10-36-02.csv  test_results_form4_google_genai_gemini_2.5_flash_lite_langchain_agent_evaluation_result_2025-10-29_14-37-22.csv  test_results_form4_google_genai_gemini_2.5_flash_lite_langchain_agent_evaluation_result_2025-10-29_17-23-34.csv  test_results_form4_google_genai_gemini_2.5_flash_lite_langchain_agent_evaluation_result_2025-10-29_18-09-59.csv  test_results_form4_gpt-5-mini_COT+StepBack_evaluation_result_2025-10-13_15-53-34.csv  test_results_form4_gpt-5-mini_COT+StepBack_evaluation_result_2025-10-14_10-21-46.csv  testing.csv  (+2 more)
ace/: README.md  (+7 more)
(+212 files in other folders)
